[package]
name = "native-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempdir = "0"
inotify = "0"
nix = "0"
scopeguard = "1"
indoc = "1"
tempfile = "3"
